PR 1910713: rename lwraft to post
name of the daemon: postd
name of the service: post

name of the RPM:
    vmware-post-1.3.0-3.x86_64.rpm
    vmware-post-client-1.3.0-3.x86_64.rpm
    vmware-post-client-devel-1.3.0-3.x86_64.rpm
    vmware-post-debuginfo-1.3.0-3.x86_64.rpm

name of the meta RPM:
    vmware-objectstore-1.3.0-3.x86_64.rpm

LWIS registry service name: post

Tools name prefix - post:
    post-cli,postschema,postadmintool,..etc.

Correct IDL file naming

Change-Id: I116124e7a25001682bd82baf202fc74987bd4c22

--- a/lwraft/gssapi-plugins/ntlm/Makefile.am
+++ b/lwraft/gssapi-plugins/ntlm/Makefile.am
@@ -25,7 +25,7 @@ libgssapi_ntlm_la_SOURCES = \
     ntlm_util.c
 
 libgssapi_ntlm_la_LIBADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/thirdparty/csrp/libcsrp.la \
     @DCERPC_LIBS@ \
     @GSSAPI_LIBS@ \
