--- a/lwraft/gssapi-plugins/srp/Makefile.am
+++ b/lwraft/gssapi-plugins/srp/Makefile.am
@@ -32,10 +32,10 @@ libgssapi_srp_la_SOURCES = \
         srprpc.c
 
 libgssapi_srp_la_LIBADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/common/libcommon.la \
     $(top_builddir)/thirdparty/csrp/libcsrp.la \
-    $(top_builddir)/client/liblwraftclient_la-srp_verifier_cstub.lo \
+    $(top_builddir)/client/libpostclient_la-srp_verifier_cstub.lo \
     @DCERPC_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@ \
