--- a/lwraft/tools/lwraftpromo/Makefile.am
+++ b/lwraft/tools/lwraftpromo/Makefile.am
@@ -13,7 +13,7 @@ lwraftpromo_CPPFLAGS = \
 
 lwraftpromo_LDADD = \
     $(top_builddir)/common/libcommon.la \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
