--- a/lwraft/tools/vdcrepadmin/Makefile.am
+++ b/lwraft/tools/vdcrepadmin/Makefile.am
@@ -13,7 +13,7 @@ vdcrepadmin_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 vdcrepadmin_LDADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/common/libcommon.la \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
