--- a/lwraft/config/post.reg.in
+++ b/lwraft/config/post.reg.in
@@ -1,17 +1,17 @@
 [HKEY_THIS_MACHINE\Services]
 
-[HKEY_THIS_MACHINE\Services\lwraft]
+[HKEY_THIS_MACHINE\Services\post]
 @security = O:SYG:BAD:(A;;KA;;;BA)
 "Description" = {
-    default = "Lightwave Raft Service"
+    default = "VMware Photon Objectstore Service"
     doc = ""
 }
 "Path" = {
-    default = "@LWRAFT_SBIN_DIR@/lwraftd"
+    default = "@LWRAFT_SBIN_DIR@/postd"
     doc = ""
 }
 "Arguments" = {
-    default = "@LWRAFT_SBIN_DIR@/lwraftd -s -l 0 -f @LWRAFT_CONFIG_DIR@/lwraftschema.ldif"
+    default = "@LWRAFT_SBIN_DIR@/postd -s -l 0 -f @LWRAFT_CONFIG_DIR@/postschema.ldif"
     doc = ""
 }
 "Environment" = {
@@ -31,9 +31,9 @@
     doc = ""
 }
 
-[HKEY_THIS_MACHINE\Services\lwraft\Parameters]
+[HKEY_THIS_MACHINE\Services\post\Parameters]
 "DefaultSchema" = {
-    default = "@LWRAFT_CONFIG_DIR@/lwraftschema.ldif"
+    default = "@LWRAFT_CONFIG_DIR@/postschema.ldif"
     doc = ""
 }
 
@@ -48,6 +48,6 @@
     doc     = "List of protocols to disable"
 }
 
-[HKEY_THIS_MACHINE\Services\lwraft\Parameters\Credentials]
+[HKEY_THIS_MACHINE\Services\post\Parameters\Credentials]
 @security = O:SYG:S-1-22-2-0D:(A;;RCFAFRFWFXKAKRKWKXNW;;;WD)(A;;RCFAFRFWFXKAKRKWKXNW;;;S-1-22-2-0)(A;;RCSDWDWOFAFRFWFXKAKRKWKXNRNWNX;;;SY)
 
