--- a/lwraft/tools/vdcaclmgr/Makefile.am
+++ b/lwraft/tools/vdcaclmgr/Makefile.am
@@ -15,7 +15,7 @@ lwraftaclmgr_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 lwraftaclmgr_LDADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/common/libcommon.la \
     @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
