--- a/lwraft/tools/vdcadmintool/Makefile.am
+++ b/lwraft/tools/vdcadmintool/Makefile.am
@@ -1,11 +1,11 @@
-bin_PROGRAMS = lwraftadmintool
+bin_PROGRAMS = postadmintool
 
-lwraftadmintool_SOURCES = \
+postadmintool_SOURCES = \
     main.c \
     ldapbindclient.c \
     util.c
 
-lwraftadmintool_CPPFLAGS = \
+postadmintool_CPPFLAGS = \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
     -I$(top_srcdir)/tools/include \
@@ -15,9 +15,9 @@ lwraftadmintool_CPPFLAGS = \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
-lwraftadmintool_LDADD = \
+postadmintool_LDADD = \
     $(top_builddir)/common/libcommon.la \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
@@ -32,6 +32,6 @@ lwraftadmintool_LDADD = \
     @SASL_LIBS@ \
     @LDAP_LIBS@
 
-lwraftadmintool_LDFLAGS = \
+postadmintool_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
     @LW_LDFLAGS@
