--- a/lwraft/tools/vdcleavefed/Makefile.am
+++ b/lwraft/tools/vdcleavefed/Makefile.am
@@ -12,7 +12,7 @@ lwraftleavefed_CPPFLAGS = \
     @OPENSSL_INCLUDES@
 
 lwraftleavefed_LDADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/common/libcommon.la \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
