--- a/lwraft/tools/vdcschema/Makefile.am
+++ b/lwraft/tools/vdcschema/Makefile.am
@@ -1,6 +1,6 @@
-bin_PROGRAMS = lwraftschema
+bin_PROGRAMS = postschema
 
-lwraftschema_SOURCES = \
+postschema_SOURCES = \
     conn.c \
     main.c \
     operations.c \
@@ -8,7 +8,7 @@ lwraftschema_SOURCES = \
     syntax.c \
     util.c
 
-lwraftschema_CPPFLAGS = \
+postschema_CPPFLAGS = \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
     -I$(top_srcdir)/tools/include \
@@ -17,8 +17,8 @@ lwraftschema_CPPFLAGS = \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
-lwraftschema_LDADD = \
-    $(top_builddir)/client/liblwraftclient.la \
+postschema_LDADD = \
+    $(top_builddir)/client/libpostclient.la \
     $(top_builddir)/common/libcommon.la \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
@@ -33,6 +33,6 @@ lwraftschema_LDADD = \
     @LDAP_LIBS@ \
     @PTHREAD_LIBS@
 
-lwraftschema_LDFLAGS = \
+postschema_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
     @LW_LDFLAGS@
