PR 1856194 : RPC interface cleanup
Change-Id: I488095e4c595180f2f41ef1914dacfdfb21adc2b

--- a/lwraft/server/vmdir/Makefile.am
+++ b/lwraft/server/vmdir/Makefile.am
@@ -28,15 +28,12 @@ postd_SOURCES = \
     superlogging.c \
     tenantmgmt.c \
     tracklastlogin.c \
-    urgentrepl.c \
     utils.c \
     vmevent.c \
     vmdir_sstub.c \
-    vmdirftp_sstub.c \
     vmdirdbcp_sstub.c \
     srp_verifier_sstub.c \
     vmdirsuperlog_sstub.c \
-    vmdirurgentrepl_sstub.c \
     vmdirraft_sstub.c
 
 VMDIRD_BACKEND_INCLUDES=
@@ -109,11 +106,8 @@ CLEANFILES = \
     vmdir_h.h \
     vmdir_cstub.c \
     vmdir_sstub.c \
-    vmdirftp_h.h \
     vmdirdbcp_h.h \
-    vmdirftp_cstub.c \
     vmdirdbcp_cstub.c \
-    vmdirftp_sstub.c \
     vmdirdbcp_sstub.c \
     srp_verifier_h.h \
     srp_verifier_cstub.c \
@@ -121,20 +115,14 @@ CLEANFILES = \
     vmdirsuperlog_h.h \
     vmdirsuperlog_cstub.c \
     vmdirsuperlog_sstrub.c \
-    vmdirurgentrepl_h.h \
-    vmdirurgentrepl_cstub.c \
-    vmdirurgentrepl_sstub.c \
     vmdirraft_h.h \
     vmdirraft_cstub.c \
     vmdirraft_sstub.c
 
-BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h vmdirraft_h.h
+BUILT_SOURCES = vmdir_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirraft_h.h
 
 vmdir_h.h vmdir_sstub.c: $(idl_srcdir)/vmdir.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdir_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
-
-vmdirftp_h.h vmdirftp_sstub.c: $(idl_srcdir)/vmdirftp.idl
-	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirftp_h.h -cstub_pref Cli_ -sstub_pref Srv_ -I$(idl_srcdir) $<
 
 vmdirdbcp_h.h vmdirdbcp_sstub.c: $(idl_srcdir)/vmdirdbcp.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirdbcp_h.h -cstub_pref Cli_ -sstub_pref Srv_ -I$(idl_srcdir) $<
@@ -144,9 +132,6 @@ srp_verifier_h.h srp_verifier_sstub.c: $(idl_srcdir)/srp_verifier.idl
 
 vmdirsuperlog_h.h vmdirsuperlog_sstub.c: $(idl_srcdir)/vmdirsuperlog.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirsuperlog_h.h -cstub_pref Cli_ -sstub_pref Srv_ -I$(idl_srcdir) -I$(top_srcdir)/include/public $<
-
-vmdirurgentrepl_h.h vmdirurgentrepl_sstub.c: $(idl_srcdir)/vmdirurgentrepl.idl
-	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirurgentrepl_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
 
 vmdirraft_h.h vmdirraft_sstub.c: $(idl_srcdir)/vmdirraft.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirraft_h.h -cstub_pref Cli_ -sstub_pref Srv_ -I$(idl_srcdir) $<
