--- a/lwraft/client/Makefile.am
+++ b/lwraft/client/Makefile.am
@@ -28,13 +28,11 @@ libpostclient_la_SOURCES = \
     users.c \
     util.c \
     vmdir_cstub.c \
-    vmdirftp_cstub.c \
     vmdirdbcp_cstub.c \
     vmdirlocalclient.c \
     srp_verifier_cstub.c \
-    vmdirsuperlog_cstub.c \
-    vmdirurgentrepl_cstub.c \
-    vmdirraft_cstub.c
+    vmdirraft_cstub.c \
+    vmdirsuperlog_cstub.c
 
 libpostclient_la_LIBADD = \
     @top_builddir@/common/libcommon.la \
@@ -62,11 +60,8 @@ CLEANFILES = \
     vmdir_h.h \
     vmdir_cstub.c \
     vmdir_sstub.c \
-    vmdirftp_h.h \
     vmdirdbcp_h.h \
-    vmdirftp_cstub.c \
     vmdirdbcp_cstub.c \
-    vmdirftp_sstub.c \
     vmdirdbcp_sstub.c \
     srp_verifier_h.h \
     srp_verifier_cstub.c \
@@ -74,19 +69,13 @@ CLEANFILES = \
     vmdirsuperlog_h.h \
     vmdirsuperlog_cstub.c \
     vmdirsuperlog_sstub.c \
-    vmdirurgentrepl_h.h \
-    vmdirurgentrepl_cstub.c \
-    vmdirurgentrepl_sstub.c \
     vmdirsuperlog_sstub.c \
     vmdirraft_sstub.c
 
-BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h vmdirraft_h.h
+BUILT_SOURCES = vmdir_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirraft_h.h
 
 vmdir_h.h vmdir_cstub.c: $(idl_srcdir)/vmdir.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdir_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
-
-vmdirftp_h.h vmdirftp_cstub.c: $(idl_srcdir)/vmdirftp.idl
-	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirftp_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
 
 vmdirdbcp_h.h vmdirdbcp_cstub.c: $(idl_srcdir)/vmdirdbcp.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirdbcp_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
@@ -96,9 +85,6 @@ srp_verifier_h.h srp_verifier_cstub.c: $(idl_srcdir)/srp_verifier.idl
 
 vmdirsuperlog_h.h vmdirsuperlog_cstub.c: $(idl_srcdir)/vmdirsuperlog.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirsuperlog_h.h -sstub_pref Srv_ -I$(idl_srcdir) -I$(top_srcdir)/include/public $<
-
-vmdirurgentrepl_h.h vmdirurgentrepl_cstub.c: $(idl_srcdir)/vmdirurgentrepl.idl
-	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirurgentrepl_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
 
 vmdirraft_h.h vmdirraft_cstub.c: $(idl_srcdir)/vmdirraft.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirraft_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
