--- a/lwraft/idl/makefile.x64
+++ b/lwraft/idl/makefile.x64
@@ -10,11 +10,9 @@ OUTDIR_DEBUG = ..\vmdird\x64\Debug
 OUTDIR_RELEASE = ..\vmdird\x64\Release
 
 all: $(OUTDIR_DEBUG)\vmdir_h.h $(OUTDIR_RELEASE)\vmdir_h.h \
-      $(OUTDIR_DEBUG)\vmdirftp_h.h $(OUTDIR_RELEASE)\vmdirftp_h.h \
       $(OUTDIR_DEBUG)\vmdirdbcp_h.h $(OUTDIR_RELEASE)\vmdirdbcp_h.h \
       $(OUTDIR_DEBUG)\srp_verifier_h.h $(OUTDIR_RELEASE)\srp_verifier_h.h \
-      $(OUTDIR_DEBUG)\vmdirsuperlog_h.h $(OUTDIR_RELEASE)\vmdirsuperlog_h.h \
-      $(OUTDIR_DEBUG)\vmdirurgentrepl_h.h $(OUTDIR_RELEASE)\vmdirurgentrepl_h.h
+      $(OUTDIR_DEBUG)\vmdirsuperlog_h.h $(OUTDIR_RELEASE)\vmdirsuperlog_h.h
 
 #
 # vmdir.idl debug/release stub generation
@@ -26,17 +24,6 @@ $(OUTDIR_DEBUG)\vmdir_h.h $(OUTDIR_DEBUG)\vmdir_s.c $(OUTDIR_DEBUG)\vmdir_c.c: v
 $(OUTDIR_RELEASE)\vmdir_h.h $(OUTDIR_RELEASE)\vmdir_s.c $(OUTDIR_RELEASE)\vmdir_c.c: vmdir.idl
 	-mkdir $(OUTDIR_RELEASE)
 	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_RELEASE)\vmdir_c.c -sstub $(OUTDIR_RELEASE)\vmdir_s.c -header $(OUTDIR_RELEASE)\vmdir_h.h vmdir.idl 2>&1
-
-#
-# vmdirftp.idl debug/release stub generation
-#
-$(OUTDIR_DEBUG)\vmdirftp_h.h $(OUTDIR_DEBUG)\vmdirftp_s.c $(OUTDIR_DEBUG)\vmdirftp_c.c: vmdirftp.idl
-	-mkdir $(OUTDIR_DEBUG)
-	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_DEBUG)\vmdirftp_c.c -sstub $(OUTDIR_DEBUG)\vmdirftp_s.c -header $(OUTDIR_DEBUG)\vmdirftp_h.h vmdirftp.idl 2>&1
-
-$(OUTDIR_RELEASE)\vmdirftp_h.h $(OUTDIR_RELEASE)\vmdirftp_s.c $(OUTDIR_RELEASE)\vmdirftp_c.c: vmdirftp.idl
-	-mkdir $(OUTDIR_RELEASE)
-	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_RELEASE)\vmdirftp_c.c -sstub $(OUTDIR_RELEASE)\vmdirftp_s.c -header $(OUTDIR_RELEASE)\vmdirftp_h.h vmdirftp.idl 2>&1
 
 #
 # vmdirdbcp.idl debug/release stub generation
@@ -71,27 +58,12 @@ $(OUTDIR_RELEASE)\vmdirsuperlog_h.h $(OUTDIR_RELEASE)\vmdirsuperlog_s.c $(OUTDIR
 	-mkdir $(OUTDIR_RELEASE)
 	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_RELEASE)\vmdirsuperlog_c.c -sstub $(OUTDIR_RELEASE)\vmdirsuperlog_s.c -header $(OUTDIR_RELEASE)\vmdirsuperlog_h.h vmdirsuperlog.idl 2>&1
 
-#
-# vmdirurgentrepl.idl debug/release stub generation
-#
-$(OUTDIR_DEBUG)\vmdirurgentrepl_h.h $(OUTDIR_DEBUG)\vmdirurgentrepl_s.c $(OUTDIR_DEBUG)\vmdirurgentrepl_c.c: vmdirurgentrepl.idl
-	-mkdir $(OUTDIR_DEBUG)
-	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_DEBUG)\vmdirurgentrepl_c.c -sstub $(OUTDIR_DEBUG)\vmdirurgentrepl_s.c -header $(OUTDIR_DEBUG)\vmdirurgentrepl_h.h vmdirurgentrepl.idl 2>&1
-
-$(OUTDIR_RELEASE)\vmdirurgentrepl_h.h $(OUTDIR_RELEASE)\vmdirurgentrepl_s.c $(OUTDIR_RELEASE)\vmdirurgentrepl_c.c: vmdirurgentrepl.idl
-	-mkdir $(OUTDIR_RELEASE)
-	$(DCEIDL) -DHAVE_DCERPC_WIN32 $(DCE_INCLUDE) -sstub_pref Srv_ -keep c_source $(NCK_IDLFLAGS) -cstub $(OUTDIR_RELEASE)\vmdirurgentrepl_c.c -sstub $(OUTDIR_RELEASE)\vmdirurgentrepl_s.c -header $(OUTDIR_RELEASE)\vmdirurgentrepl_h.h vmdirurgentrepl.idl 2>&1
-
 clean:
 	-del /f $(OUTDIR_DEBUG)\vmdir_c.c $(OUTDIR_DEBUG)\vmdir_s.c $(OUTDIR_DEBUG)\vmdir_h.h
 	-del /f $(OUTDIR_RELEASE)\vmdir_c.c $(OUTDIR_RELEASE)\vmdir_s.c $(OUTDIR_RELEASE)\vmdir_h.h
-	-del /f $(OUTDIR_DEBUG)\vmdirftp_c.c $(OUTDIR_DEBUG)\vmdirftp_s.c $(OUTDIR_DEBUG)\vmdirftp_h.h
 	-del /f $(OUTDIR_DEBUG)\vmdirdbcp_c.c $(OUTDIR_DEBUG)\vmdirdbcp_s.c $(OUTDIR_DEBUG)\vmdirdbcp_h.h
-	-del /f $(OUTDIR_RELEASE)\vmdirftp_c.c $(OUTDIR_RELEASE)\vmdirftp_s.c $(OUTDIR_RELEASE)\vmdirftp_h.h
 	-del /f $(OUTDIR_RELEASE)\vmdirdbcp_c.c $(OUTDIR_RELEASE)\vmdirdbcp_s.c $(OUTDIR_RELEASE)\vmdirdbcp_h.h
 	-del /f $(OUTDIR_DEBUG)\srp_verifier_c.c $(OUTDIR_DEBUG)\srp_verifier_s.c $(OUTDIR_DEBUG)\srp_verifier_h.h
 	-del /f $(OUTDIR_RELEASE)\srp_verifier_c.c $(OUTDIR_RELEASE)\srp_verifier_s.c $(OUTDIR_RELEASE)\srp_verifier_h.h
 	-del /f $(OUTDIR_DEBUG)\vmdirsuperlog_c.c $(OUTDIR_DEBUG)\vmdirsuperlog_s.c $(OUTDIR_DEBUG)\vmdirsuperlog_h.h
 	-del /f $(OUTDIR_RELEASE)\vmdirsuperlog_c.c $(OUTDIR_RELEASE)\vmdirsuperlog_s.c $(OUTDIR_RELEASE)\vmdirsuperlog_h.h
-	-del /f $(OUTDIR_DEBUG)\vmdirurgentrepl_c.c $(OUTDIR_DEBUG)\vmdirurgentrepl_s.c $(OUTDIR_DEBUG)\vmdirurgentrepl_h.h
-	-del /f $(OUTDIR_RELEASE)\vmdirurgentrepl_c.c $(OUTDIR_RELEASE)\vmdirurgentrepl_s.c $(OUTDIR_RELEASE)\vmdirurgentrepl_h.h
