Fix PR 1917815 and Restore raft term persistence
This is a major overhaul on MDB WAL implementation. It dropped the idea
of running MDB WAL under MDB_WRITEMAP mode; instead, the new version runs
MDB at non-MDB_WRITEMAP mode. The change should reduce the risk of altering
the original MDB implementation too much. The database integrity now needs only
on the recovered database, i.e. on database after rolling forward WAL files.
The change also allows switching between WAL and non-WAL mode as long as the
database environment is gracefully shutdown. The database remote transfer is now
of capable of switching to cold copy if the source server is running at non-WAL mode.

Change-Id: I5abcf4c8fc8da1258201c55ad9f5fa930052e407

--- a/lwraft/server/mdb-store/Makefile.am
+++ b/lwraft/server/mdb-store/Makefile.am
@@ -33,7 +33,8 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/thirdparty/openldap/libraries/mdb \
     -I$(top_srcdir)/server/include \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@
+    @OPENSSL_INCLUDES@ \
+    -D MDB_USE_PWRITEV
 
 libmdb_store_la_LDFLAGS = \
     -static \
