Implement the common Metrics Instrumentation API
This change contains the metrics api which can be used by all the services to maintain and get metrics.
Likewise upgrade is requred for this to work.

Change-Id: Icd9412f46c7edd741eb1131072fe71b671ea6130

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ MAKEROOT=$(SRCROOT)/support/make
 include $(MAKEROOT)/makedefs.mk
 
 SUBDIRS = \
+        vmmetrics \
         vmevent \
         vmidentity/ssoclients \
         lwraft \
