post: add cache in rest-head to improve performance (PR 1923306)
- Port RW lock from vmdir
- Cache VmAfdDCNameA result
- Cache VmAfdDomainName result
- Cache OIDCSigningCertificatePEM

Change-Id: I52e9a0ca7b2aa74bed76c31655b45e29ffaa1e15

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -9,6 +9,7 @@ if REST_ENABLED
 librest_head_la_SOURCES += \
     auth.c \
     authtoken.c \
+    cache.c \
     decode.c \
     encode.c \
     globals.c \
