post: grant lightwave built-in admins group members full access (PR 1898012)
Change-Id: Ib1f3cc1b0d4a239cac43b96735272b93f489cdf3

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -16,6 +16,7 @@ librest_head_la_SOURCES += \
     httperror.c \
     ldapapi.c \
     ldapcontrol.c \
+    lightwave.c \
     objectapi.c \
     operation.c \
     param.c \
