Enable LWRaft to be an ETCD equivalent service.
This is going to be an incremental review update.

I am currently testing my code using postman and the CoreOS Etcd client

Change-Id: I7fdf90e2367024b2fe213a6996f09ad8b9f76e21

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -12,6 +12,7 @@ librest_head_la_SOURCES += \
     cache.c \
     decode.c \
     encode.c \
+    etcdapi.c \
     globals.c \
     httperror.c \
     ldapapi.c \
