Added Option to VDCREPADMIN tool for enabling HA topology
This changes parses the various options:
    no-interaction, inter-site or intra-site and considering non-reachable servers.
It calls publicly exposed API and data structure and sets the demo workflow
for any tool to use those public APIs. These public API are dummy.
These changes are instrumental for testing any code developed to enable HA topology feature.

Changes Made:
-Added Public API Hooks and exposed them in the vmdirclient library
-Added Data Structure that will be used across the tool and client
-Added the tool-side code to execute particular command and its supported options

Test Plan:
- Run the command on tool and it should call corresponding API and behave according to Options provided.

Change-Id: I03c7c6495ba532e74d6c0b79d540625a23d57322

--- a/vmdir/client/Makefile.am
+++ b/vmdir/client/Makefile.am
@@ -18,6 +18,7 @@ libvmdirclient_la_SOURCES = \
     ldaputil.c \
     libmain.c \
     pnid.c \
+    redundancy.c\
     registry.c \
     repadmin.c \
     replication.c \
