Collect VMDIR LDAP metrics using metrics API
With this update, vmdir ldap request durations for different operations and
ldap error counts are collected and maintained using the metrics API.

There are some changes to vmdir rest-head to get these metrics in prometheus format on HTTP GET request.

The update also includes some changes to Metrics API to get the data in expected format.

Change-Id: I5cab22ca9a751b151eaeee0b9a5299f3f71eabee

--- a/vmdir/server/ldap-head/Makefile.am
+++ b/vmdir/server/ldap-head/Makefile.am
@@ -17,6 +17,7 @@ libldap_head_la_SOURCES = \
     delete.c        \
     filter.c        \
     globals.c       \
+    metricsinit.c   \
     modify.c        \
     openssl.c       \
     operation.c     \
@@ -34,6 +35,7 @@ libldap_head_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/vmdir/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
