Dns Metrics Code Instrumentation
Changes Made :

Metrics included for the following Dns services:
- Dns Protocol
- Rpc
- Store
- Cache
Integrated the Dns metrics with the Metrics API
Added metrics.c file in server/vmdns for Metrics initialization
Removed the earlier implementation of DNS Metrics in vmdns/server/common/opstatistic.c
Rest Metrics End Point : http://IP_ADDRESS:7677/v1/dns/metrics

Change-Id: I0542ea1ed676af37b276975cfd4eefbb3e57e70c

--- a/vmdns/server/common/Makefile.am
+++ b/vmdns/server/common/Makefile.am
@@ -28,18 +28,19 @@ libsrvcommon_la_SOURCES = \
     store.c               \
     util.c                \
     zone.c                \
-    zonelist.c            \
-    opstatistic.c
+    zonelist.c
 
 libsrvcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdns/include \
     -I$(top_srcdir)/vmdns/include/public \
     -I$(top_srcdir)/vmdns/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@
 
 libsrvcommon_la_LIBADD = \
-    $(top_builddir)/vmdns/vmsock/api/libvmsock.la
+    $(top_builddir)/vmdns/vmsock/api/libvmsock.la \
+    $(top_builddir)/vmmetrics/libvmmetrics.la
 
 libsrvcommon_la_LDFLAGS = \
     -static
