--- a/vmdns/server/vmdns/Makefile.am
+++ b/vmdns/server/vmdns/Makefile.am
@@ -8,6 +8,7 @@ vmdnsd_SOURCES = \
     globals.c     \
     init.c        \
     main.c        \
+    metrics.c     \
     parseargs.c   \
     rpc.c         \
     rpcserv.c     \
@@ -24,6 +25,7 @@ vmdnsd_CPPFLAGS = \
     -I$(top_srcdir)/vmdns/server/include \
     -I$(top_srcdir)/vmdns/server/service \
     -I$(top_srcdir)/vmdir/include/public \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@
 
