Add vmdir P0 Replication Metrics
Below replication metrics are collected and maintained:
    - cycle duration
    - connection duration per partner
    - connection failure count per partner
    - number of unfinished attempts per partner
    - high water mark USN per partner
    - number of changes applied per partner
    - sync duration per partner

Change-Id: I19d5f1499e351e8f7d1cccb9f43c6f8f09e60756

--- a/vmdir/server/indexcfg/Makefile.am
+++ b/vmdir/server/indexcfg/Makefile.am
@@ -19,6 +19,7 @@ libindexcfg_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/vmdir/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
