--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -33,6 +33,7 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/mdb \
     -I$(top_srcdir)/vmdir/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
