--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -3,6 +3,7 @@ noinst_LTLIBRARIES = libreplication.la
 
 libreplication_la_SOURCES = \
     libmain.c \
+    metrics.c \
     firstreplcycle.c \
     replentry.c \
     thread.c
@@ -14,6 +15,7 @@ libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/vmdir/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
