--- a/vmdir/tools/vmkdc_admin/Makefile.am
+++ b/vmdir/tools/vmkdc_admin/Makefile.am
@@ -16,6 +16,7 @@ vmkdc_admin_CPPFLAGS = \
     -I$(thirdparty_srcdir)/heimdal \
     -I$(thirdparty_srcdir)/heimdal/krb5-crypto \
     -I$(thirdparty_srcdir)/heimdal/asn1 \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
