--- a/vmdir/server/kdckrb5/Makefile.am
+++ b/vmdir/server/kdckrb5/Makefile.am
@@ -36,6 +36,7 @@ libvmkrb5_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/heimdal \
     -I$(top_srcdir)/vmdir/thirdparty/heimdal/krb5-crypto \
     -I$(top_srcdir)/vmdir/thirdparty/heimdal/asn1 \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
