--- a/vmdir/server/kdctools/Makefile.am
+++ b/vmdir/server/kdctools/Makefile.am
@@ -16,6 +16,7 @@ libvmkdctools_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/heimdal/krb5-crypto \
     -I$(top_srcdir)/vmdir/thirdparty/heimdal/asn1 \
     -I$(top_srcdir)/vmdir/server/vmkdc \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
