--- a/vmdir/server/vmkdc_mit_tools/Makefile.am
+++ b/vmdir/server/vmkdc_mit_tools/Makefile.am
@@ -25,6 +25,7 @@ MIT_TOOLS_INCLUDES = \
     -I$(thirdparty_srcdir)/heimdal/krb5-crypto \
     -I$(thirdparty_srcdir)/heimdal/asn1 \
     -I$(top_srcdir)/vmdir/server/vmkdc \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
