--- a/vmdir/tools/vdcresetMachineActCred/Makefile.am
+++ b/vmdir/tools/vdcresetMachineActCred/Makefile.am
@@ -9,6 +9,7 @@ vdcresetMachineActCred_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include/public \
     -I$(top_srcdir)/vmdir/server/include \
     -I$(top_srcdir)/vmdir/tools/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
