--- a/lwraft/server/kdckrb5/Makefile.am
+++ b/lwraft/server/kdckrb5/Makefile.am
@@ -29,6 +29,7 @@ libvmkrb5_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/thirdparty/heimdal \
     -I$(top_srcdir)/lwraft/thirdparty/heimdal/krb5-crypto \
     -I$(top_srcdir)/lwraft/thirdparty/heimdal/asn1 \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
