--- a/lwraft/server/mdb-store/Makefile.am
+++ b/lwraft/server/mdb-store/Makefile.am
@@ -32,6 +32,7 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/mdb \
     -I$(top_srcdir)/lwraft/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
     -D MDB_USE_PWRITEV
