--- a/lwraft/server/vmdir/Makefile.am
+++ b/lwraft/server/vmdir/Makefile.am
@@ -14,6 +14,7 @@ postd_SOURCES = \
     ipcserver.c \
     krb.c \
     main.c \
+    metricsinit.c \
     parseargs.c \
     regconfig.c \
     rpc.c \
@@ -49,6 +50,7 @@ postd_CPPFLAGS = \
     -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     -I$(top_srcdir)/vmevent/include/public \
+    -I$(top_srcdir)/vmmetrics/include/public \
     $(VMDIRD_BACKEND_INCLUDES) \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@ \
@@ -73,6 +75,7 @@ postd_LDADD = \
     $(top_builddir)/lwraft/thirdparty/csrp/libcsrp.la \
     $(top_builddir)/vmidentity/ssoclients/common/src/libssocommon.la \
     $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
+    $(top_builddir)/vmmetrics/libvmmetrics.la \
     @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
