--- a/vmafd/config/Makefile.am
+++ b/vmafd/config/Makefile.am
@@ -1,6 +1,7 @@
 vmafdconf_DATA = vmafd.reg \
                  vmafdd-syslog-ng.conf \
-		 java.security.linux
+		 java.security.linux \
+                 vmafd-telegraf.conf
 
 javaetc_DATA = vmware-override-java.security
 
