--- a/vmdns/config/Makefile.am
+++ b/vmdns/config/Makefile.am
@@ -2,4 +2,5 @@ vmdnsconf_DATA = \
     vmdns.reg    \
     vmdns-client.reg \
     vmdnsd-syslog-ng.conf \
-    vmdns-rest.json
+    vmdns-rest.json \
+    vmdns-telegraf.conf
