--- a/lwraft/server/kdcsrvcommon/Makefile.am
+++ b/lwraft/server/kdcsrvcommon/Makefile.am
@@ -16,6 +16,7 @@ libkdcsrvcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
     -I$(top_srcdir)/lwraft/include/public \
     -I$(top_srcdir)/lwraft/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
