--- a/lwraft/server/ldap-head/Makefile.am
+++ b/lwraft/server/ldap-head/Makefile.am
@@ -17,6 +17,7 @@ libldap_head_la_SOURCES = \
     delete.c        \
     filter.c        \
     globals.c       \
+    metricsinit.c   \
     modify.c        \
     openssl.c       \
     operation.c     \
@@ -34,6 +35,7 @@ libldap_head_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/lwraft/server/include \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
