--- a/lwraft/testing/kerberos/Makefile.am
+++ b/lwraft/testing/kerberos/Makefile.am
@@ -11,6 +11,7 @@ krb5keys_test_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/server/tools \
     -I$(top_srcdir)/lwraft/server/include \
     -I$(top_srcdir)/lwraft/thirdparty/heimdal/asn1 \
+    -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
