PR:1931815 Proxy feature for POST - The feature allows accessing any POST node for REST requests. The request is forwarded to leader who responds with result which is forwarded to the client.
Change-Id: I9e5bb19dc26d099828e6968d190c21c2b40b6067

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -22,6 +22,7 @@ librest_head_la_SOURCES += \
     objectapi.c \
     operation.c \
     param.c \
+	proxy.c \
     resource.c \
     result.c \
     vmafd.c
