post: add a new functionality to schema tool to perform index patch (PR 1945205)
- introduce new ldif tag 'attributeIndices'
- update schema tool to perform index patch as part of schema patch
- remove obsolete postd schema patch command line option
- add UID index in ldif file

Change-Id: Iaab786857698c7fb4c491c89c387a82155d18313

--- a/lwraft/server/middle-layer/Makefile.am
+++ b/lwraft/server/middle-layer/Makefile.am
@@ -26,6 +26,7 @@ libmiddle_layer_la_SOURCES = \
     pscache.c \
     sasl.c \
     saslsockbuf.c \
+    schema.c \
     search.c \
     specialsearch.c \
     srputil.c \
