Minor fixes and improved error handling.
Changes added:
1. Added curl error code to vmdir error mapping
2. Fixed the method name for delete
3. curlopt_put method is not supported anymore
chnaged to customrequest "put"

Change-Id: Id59d2b7e8d345a689cab194ec80b46d02b03380e

--- a/lwraft/server/common/Makefile.am
+++ b/lwraft/server/common/Makefile.am
@@ -11,6 +11,7 @@ noinst_LTLIBRARIES = libsrvcommon.la
 
 libsrvcommon_la_SOURCES = \
     candidates.c \
+    curltovmdirerror.c \
     entryencodedecode.c \
     krbsrvutil.c \
     oprequestutil.c \
