PR 1961087: allow CC machine account to create k8s machine account
every computer is implicitly default to a member of DCClients group.

1. allow DCClients to READ domain object
2. allow DCClients to READ site container objects
3. test output
root@lw-t3 [ /home/admin/workspaces/LW-12/build/vmdir/testing ]#  ./test_runner/.libs/vmdir_test_runner -H localhost -u administrator -w 'xxx' -d lw.local -t /home/admin/workspaces/LW-12/build/r/testing/integration_tests/acls/.libs
VmDir integration tests starting ...
Executing test module: /home/admin/workspaces/LW-12/build/vmdir/testing/integration_tests/acls/.libs/libsecuritydescriptortests.so ...
Testing security descriptor code ...
TestProtectedEntries succeeded (0)
TestCustomGroups succeeded (0)
TestK8sMachineActSelfService succeeded (0)
Security descriptor tests finished successfully.

Change-Id: I14d418ebe60d3ea103fe76a0ea4742edbcfea138

--- a/vmdir/testing/integration_tests/acls/Makefile.am
+++ b/vmdir/testing/integration_tests/acls/Makefile.am
@@ -16,6 +16,7 @@ libsecuritydescriptortests_la_SOURCES = \
     domainadminsrights.c \
     domainclientsrights.c \
     inheritance.c \
+    k8s_machine_act_selfservice.c \
     legacy_access_checks.c \
     main.c \
     ntsecuritydescriptor.c \
