vmdir: cleaning up the REST request handler function code (PR 1963942)
Change-Id: I9159da1185b5f89d9bcb06cdfa00257ca4b39e0d

--- a/vmdir/server/rest-head/Makefile.am
+++ b/vmdir/server/rest-head/Makefile.am
@@ -12,6 +12,7 @@ librest_head_la_SOURCES += \
     decode.c \
     encode.c \
     globals.c \
+    handler.c \
     httperror.c \
     ldapapi.c \
     metricsapi.c \
