post: updating AWS code deploy scripts (PR 1948010)
Change-Id: I901620b9e1e405523dd5e7939b8afb65602ac1e3

--- a/lwraft/config/deployment/aws/appspec.yml
+++ b/lwraft/config/deployment/aws/appspec.yml
@@ -1,23 +1,31 @@
+#
+# Note: Log data produced by these scripts will be available in
+# /opt/codedeploy-agent/deployment-root/DEPLOYMENT_GROUP_ID/DEPLOYMENT_ID/logs/
+#
 version: 0.0
 os: linux
 files:
   - source: /
     destination: /var/vmware/lightwave
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies.sh
-      timeout: 300
-      runas: root
-  AfterInstall:
-    - location: scripts/install_wrapper.sh
-      timeout: 300
-      runas: root
-  ApplicationStart:
-    - location: scripts/start_server_wrapper.sh
+  BeforeBlockTraffic:
+    - location: scripts/before_block_traffic.sh
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: root
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/application_start.sh
       timeout: 300
       runas: root
   BeforeAllowTraffic:
