post: cleaning up the REST request handler function code (PR 1964820)
Change-Id: Ide914d91e8ba4c15280e352e84722597bc451c4f

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -14,6 +14,7 @@ librest_head_la_SOURCES += \
     encode.c \
     etcdapi.c \
     globals.c \
+    handler.c \
     httperror.c \
     ldapapi.c \
     ldapcontrol.c \
