vmdns: cleaning up the REST request handler function code (PR 1964821)
Change-Id: I04278f0a12830e3cf1797f0aae4970918d30138e

--- a/vmdns/server/rest-head/Makefile.am
+++ b/vmdns/server/rest-head/Makefile.am
@@ -8,11 +8,12 @@ if REST_ENABLED
 
 librest_head_la_SOURCES += \
     globals.c \
+    handler.c \
+    httperror.c \
     metricsapi.c \
     operation.c \
     resource.c \
-    result.c \
-    httperror.c
+    result.c
 
 endif
 
