PR: 1963057 iptables rules need be preserved during post node reboot
This change is to address the issue of firewall ports closing
after every reboot. The firewall.service will now handle the
ports for POST service as well

Tests Performed:

1. Install server RPM and post RPM check the iptables rules.
2. Install server and post independantly check the rules.
3. Uninstall client check the service is unistalled.
4. Reboot the machine and check if rules are preserved.

Change-Id: I792555cc00e658b436ccd814da729a9ce9c66fff

--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -5,8 +5,10 @@ bin_SCRIPTS = \
     @top_srcdir@/config/scripts/domainjoin.sh
 
 scriptsconf_SCRIPTS = \
-    setfirewallrules.py \
-    firewall.json 
+ setfirewallrules.py \
+ lw-firewall-server.json \
+ lw-firewall-post.json \
+ lw-firewall-client.json
 
 systemd_SCRIPTS = firewall.service
 
