PR 1968560: back this out now as it breaks IDM deployment
Change-Id: I9ba6f982049336e1543b4af05f82739c022ca91b

--- a/vmdir/config/vmdir.reg.in
+++ b/vmdir/config/vmdir.reg.in
@@ -37,6 +37,12 @@
     doc = ""
 }
 
+"AllowInsecureAuthentication" = {
+    default = dword:00000001
+    value   = dword:00000001
+    doc = "Set to '1' to allow clear-text password authentication."
+}
+
 "KerberosPort" = {
     default = dword:00000058
     doc     = "Kerberos Protocol Port"
