Update vmdir and post metrics
1) Modified the histogram bucket ranges for ldap and dcerpc metrics.
2) Added new metrics tags for LDAP_BUSY and LDAP_OTHER.
3) Added inputs.disk to telegraf configuration.

Test:
 1) Promoted a Lightwave instance
 2) Ran command 'curl http://localhost:7477/v1/vmdir/metrics'
    The response included the correct histogram bucket ranges:

vmdir_ldap_request_duration_bucket{le="1",operation="search"} 132
vmdir_ldap_request_duration_bucket{le="10",operation="search"} 133
vmdir_ldap_request_duration_bucket{le="100",operation="search"} 133
vmdir_ldap_request_duration_bucket{le="500",operation="search"} 133
vmdir_ldap_request_duration_bucket{le="1000",operation="search"} 133
vmdir_ldap_request_duration_bucket{le="+Inf",operation="search"} 133

Change-Id: I6d822382ea7d5697525988d7451c9982dafecb85

--- a/vmmetrics/config/telegraf.conf
+++ b/vmmetrics/config/telegraf.conf
@@ -21,7 +21,7 @@
 
 [[outputs.wavefront]]
   prefix = "lightwave."
-  host = ""
+  host = "@@WAVEFRONT_PROXY@@"
   port = 2878
   metric_separator = "."
   source_override = ["hostname", "snmp_host", "node_host"]
@@ -34,6 +34,8 @@
   collect_cpu_time = false
 
 [[inputs.mem]]
+
+[[inputs.disk]]
 
 [[inputs.diskio]]
 
