post: updating node promotion logic for blue/gree deployment option (PR 1969621)
Change-Id: Id8bd7297c229f033af0085d579b984153144aee2

--- a/lwraft/config/deployment/aws/appspec.yml
+++ b/lwraft/config/deployment/aws/appspec.yml
@@ -28,7 +28,7 @@ hooks:
     - location: scripts/application_start.sh
       timeout: 300
       runas: root
-  BeforeAllowTraffic:
-    - location: scripts/before_allow_traffic.sh
+  ValidateService:
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: root
