Implement a flag (multi-tenant) on solution user during auth we will lookup solution user reglar way, and if not found, we will search for multi-tenant solution user in system tenant if succeeds -> we will issue a token with all regular info of a solution user in the system tenant, but token will be from current tenant.
Added an integration test case for multi-tenant solution user from current tenant.

Change-Id: Ifdc21e23a01d977aad16d9b5f2dc7e398008f64a

--- a/vmidentity/openidconnect/client/src/test/resources/config.properties
+++ b/vmidentity/openidconnect/client/src/test/resources/config.properties
@@ -4,6 +4,10 @@ oidc.rp.prefix = oidc-client-test-
 admin.user = Administrator@lw-testdom.com
 admin.password = Ca$hc0w1
 tenant = lw-testdom.com
+tenant1 = integ-test.com
+tenant1.admin.user = Administrator@integ-test.com
+tenant1.admin.password = Ca$hc0w1
+tenant1.issuer = oidc-client-test
 
 # GSS grant test AD domain config
 ad.domain = SSOLABS.COM
