This checkin port WAL feature from Post to Vmdir. The default mode is not enable WAL (reg key MdbEnableWal=0) It should work with mixed mode between too partners, including hot/cold copy. See PR 1961092 for detail.
Change-Id: Id22a53977e41376d168f4d2ac22a70cac0cfa79b

--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -35,7 +35,8 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/server/include \
     -I$(top_srcdir)/vmmetrics/include/public \
     @LW_INCLUDES@ \
-    @OPENSSL_INCLUDES@
+    @OPENSSL_INCLUDES@ \
+    -D MDB_USE_PWRITEV
 
 libmdb_store_la_LDFLAGS = \
     -static \
